Additional test combination, old getSubject call with sm=allow