@@ -33,6 +33,7 @@
  *
  * @run main/othervm RMIPasswdAuthTest
  * @run main/othervm -Djava.security.manager=allow RMIPasswdAuthTest
+ * @run main/othervm -Djava.security.manager=allow -DSimpleStandard.useGetSubjectACC=true RMIPasswdAuthTest
  */
 
 import java.io.File;
